--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tree Chat</title>
-    <link rel="stylesheet" href="/src/style.css" />
+
+    <link href="node_modules/normalize.css/normalize.css" rel="stylesheet" />
+    <link
+      href="node_modules/@blueprintjs/core/lib/css/blueprint.css"
+      rel="stylesheet"
+    />
+    <link
+      href="node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css"
+      rel="stylesheet"
+    />
+    <link
+      href="node_modules/@blueprintjs/popover2/lib/css/blueprint-popover2.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/src/style.scss" />
   </head>
-  <body>
+  <body class="bp4-dark">
     <main id="root"></main>
     <script type="module" src="/src/App.tsx"></script>
   </body>
