--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tree Chat</title>
 
-    <link href="node_modules/normalize.css/normalize.css" rel="stylesheet" />
     <link
       href="node_modules/@blueprintjs/core/lib/css/blueprint.css"
       rel="stylesheet"
     />
-    <link
+    <!-- <link
       href="node_modules/@blueprintjs/icons/lib/css/blueprint-icons.css"
       rel="stylesheet"
-    />
+    /> -->
     <link
       href="node_modules/@blueprintjs/popover2/lib/css/blueprint-popover2.css"
       rel="stylesheet"
